# backup-rat

./: CHANGELOG.md  Cargo.toml  README.md  USAGE.md
misc/: ASCII_logo.txt
src/: cli.rs  config.rs  copy_operation.rs  lib.rs  local_copy.rs  main.rs  operation.rs  operations.rs
src/config/: mod.rs
src/operation/: mod.rs
test_resources/: config.toml  pathsconfig.toml
