[package]
name = "backup_rat"
version = "0.1.2"
authors = ["System.rat"]
description = "A highly configurable backup tool"
documentation = "https://github.com/System-rat/backup-rat"
homepage = "https://github.com/System-rat/backup-rat"
repository = "https://github.com/System-rat/backup-rat"
readme = "USAGE.md"
keywords = [
    "backup",
    "files",
    "cli"
]
categories = [
    "command-line-interface",
    "command-line-utilities",
    "filesystem"
]
license = "MPL-2.0"
license-file = "LICENSE.txt"

[[bin]]
name = "backup-rat"
path = "src/main.rs"
doc = false

[lib]
name = "backup_rat"
path = "src/lib.rs"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false

[dependencies]
regex = "1.0.1"
clap = "2.31.2"
toml = "0.4.6"
serde = "1.0.66"
serde_derive = "1.0.66"
